--- a/Unit13.fmx
+++ b/Unit13.fmx
@@ -2,8 +2,8 @@ object Form13: TForm13
   Left = 0
   Top = 0
   BorderIcons = []
-  BorderStyle = None
-  ClientHeight = 625
+  BorderStyle = Single
+  ClientHeight = 377
   ClientWidth = 683
   Position = DesktopCenter
   Quality = HighPerformance
@@ -16,7 +16,302 @@ object Form13: TForm13
   DesignerMasterStyle = 0
   object Timer1: TTimer
     OnTimer = FinTemps
-    Left = 200
-    Top = 480
+    Left = 464
+    Top = 304
+  end
+  object Layout1: TLayout
+    Align = MostTop
+    Size.Width = 683.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 1
+    object Label1: TLabel
+      Align = MostTop
+      StyledSettings = [FontColor]
+      Size.Width = 683.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Family = 'Engravers MT'
+      TextSettings.Font.Size = 16.000000000000000000
+      TextSettings.Font.StyleExt = {00050000000000000006000000}
+      TextSettings.HorzAlign = Center
+      Text = 'Bienvenue'
+      TabOrder = 0
+    end
+    object Label2: TLabel
+      Align = MostBottom
+      StyledSettings = [FontColor]
+      Position.Y = 25.000000000000000000
+      Size.Width = 683.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Family = 'Engravers MT'
+      TextSettings.Font.Size = 16.000000000000000000
+      TextSettings.Font.StyleExt = {00050000000000000006000000}
+      Text = 'Appuyer pour se connecter'
+      TabOrder = 1
+    end
+  end
+  object GroupBox1: TGroupBox
+    Position.X = 64.000000000000000000
+    Position.Y = 88.000000000000000000
+    Size.Width = 249.000000000000000000
+    Size.Height = 193.000000000000000000
+    Size.PlatformDefault = False
+    Text = 'Thermostat'
+    TabOrder = 3
+    object ImageViewer1: TImageViewer
+      EnableDragHighlight = False
+      Position.X = 192.000000000000000000
+      Position.Y = 8.000000000000000000
+      TabOrder = 37
+      ParentShowHint = False
+      ShowHint = False
+      Bitmap.PNG = {
+        89504E470D0A1A0A0000000D4948445200000035000000350806000000E1E6A3
+        70000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+        07D9494441546843ED9A7D7014E51DC7BFB77B7B97E4F2025C1A300D0919D28B
+        424CD4C13A167C29888E2F50D406C73FDA293A1D66F40F8D765A2D8D8EA558A7
+        2395625B3B3814D4D182525FB12F5A02E5550121901033772484340402BD8490
+        3B92BDBDDBEBEF79762F777B7739C2E562EE9C7E6636FBECF36C36CFF7F9BD3C
+        CF3E597C1D31E9E7615A5A5AEC92242DA06249301894B4DAF4C364322974EA92
+        65F95F555555BD5AAD864194CBE57A5255D55F0A8290A35765025E1AFC7A87C3
+        F1927E1D16C504D1E945ED2AF3206175246C0D2B7351CCE54451ECCC300B45E3
+        25572C65AEC845919596D269332B47D2D8EC84EB44177C3EE6BEE981C522C131
+        B31435B32AF49A3064AD5AB2D6162ECAE9743E4681C74D17E2F77FDE827FEF3B
+        AC5FA51FDF9D7B1D1EF9D1FDFA9506E583C72A2B2BD78644D591A8DFF216A2F1
+        980BABD66CD42E0411E6DC627E9E70D400FC9E6E7E66D4D72D437584C5C8524F
+        B0841157D4DB1F6EC33B1F3550DA34C37E733DCC9366E82D138FD27702EEDD2B
+        B9B0DA45F3B174319B7D3442A204FDDA80ACC79098579C568218D2E47248CC73
+        88503FA3892B2A84490CBBDC407713DAB7AD1E3EDCCEEDF09C3EC6CB9E332DFA
+        5D5F0DC14B844242519148363B72ECE5C387B5E00A1AB1425EB6D80AF5BBD283
+        518B1A74932F3B1B868FA0EA87356F2AA65D731F2C7945FA5DE9C1A845E5975C
+        83F2054F0E1FB62287DE927E8C5A9468B119DC4F102D7A4BFA316A51F13053BC
+        CEAB1051B750C20BF75BF09BEF5BF0933B242CB84A8418F1E4EBCA043C7D9784
+        9FDF1DFF606D73E939216E9F2DE2B587ADA89D63D66B2E8FA445D9ACC0866556
+        ACB847E29DA8992EE0EA12810B62C256DD6B81597FFA6D5477B343C44DDF8A7F
+        B0B66573C302EEAE16519467C2F7AE4D6EC24F5A94EC078E9F0D62EB9100EADF
+        F761F9EB321E7DD3875777FAE1A33626F2964AAD53AFECF063E55605CF7F1C7B
+        3475A9FC9E96D3DA99F1CEC100DACFA978EB337A5012242DCA4F2B95E73EF4E1
+        0FDB151CEC50D1D91BE41D79F7901F5B8F6A9D292FE40B160C0C05B1F77800BB
+        5CC6E30809AA982AD04A0078F78BB080DDD4C606E86F4DDA72E872495A542298
+        EB30CE5FE4A711593A474436BD5B33811D6E529622128B6243380A72AD263868
+        C459B0B3C09F4771E2958368681D79A427E798704F8D19EC2F6CDA9F9C9B8DC4
+        982D65A1F8DEF89005BF7BD0825F50D26081CFE2EDA75B14F47A471E945AB292
+        957E771FB9E589FFA6CE4A8C318B52C8183B9D2A5A29D04FF707B97159679F5D
+        2CE19B9334378C66B2CD84BBAAB56CB7E9C0E5C74DFCA78619B3282662ED3605
+        759B7D7868838C1FAC97B1AF4DE571F5C8FCF89B512C9698F0FD2754B87AC259
+        2F55A43C51B83D419E1119B38B057A27E3C5619895EEBC5AB3D2E603A98DA510
+        2917C5F8869EFDF8CFA87079E07A33B7D2A1932A5ABA536F2546D2A2A61598B0
+        EE87563CB348C2926BCDB89526DA85B3442CBF45C2CA259ADBED6D0B18344D61
+        56AAD226E4BFA438E34592B4A82C1A6D7BAE0937CE6442CCF8D99D129EB89D09
+        14798A6FFC8F8A57B61B3B7EFD0C8167CBA334E9369F1A1F2B319216C526CB07
+        D70DF125D25B9FFBF1779AFD3F3916C01BFBFC3C693CFD571F2ED04A2292DD94
+        BED7EFF2E3C57F8EEF96DB98628AADF1D81289096119F0A54F152E90A5F77878
+        65600B2D87CE0D44055A8A19974431D12416151C3FBF1F13D1F34414714589FA
+        1B9EDF7B16AAEF022FA723A17E46C325476F66EED97F146B5ED5B6D6856C3BAC
+        45557463FA78EAD0998350E5013CFEE30730F7DBD57A2D5BDD24D8A10D0454AC
+        78E14F68EB38A5D7A41F15334AF0ABA7961BAC95501443F6F9B0F5D3BD70B675
+        42F18FDF4479B94866331C33A763D1C279FC3F20915C52542692702F3DD3F9BF
+        A84CE192A27C010187BAB3A1C659D9048226ECEFCAC19E93B698E38B53D9FC05
+        7222B8A4A80FBECCC786437634B4E7E93561DADC16BCD138059B9A26C71C1B0F
+        DBD13D30319F61241475D62BF15167FCC395870BB2F1F60ABB0FD372E3AFB8CB
+        26F9509C1FDBA6280ABC5E2FFC71A60945F1E3709313CDADED50E3B8C6A022A0
+        A9271B1D7D89F7F1138A7AAF259FBB1843F60BF8C495CFCB210453108BAE8CBF
+        8CBA77567FCC06C9C0C000BABABAD0D3D3C3CF8383837A0B757848C653ABFE88
+        E7D7BE86E756AFC7AF5F7EDD20ACF7A288553BA662DD013B56EF29C2E6A6497A
+        4B2C238A3AEEB6A2994625925D64B5331EA34B554F1B446521BD534450437533
+        A718EB18BDBDBD6C2EE1655555D1D7D7C7CB8C9D9F35A2F3548F7EA57DEED0DC
+        DAA65F013B3AF2D02F87F7D6779FCC85FBA2B6D7114D5C51ECEFBEF765EC48A8
+        64B58F5A8DD6622CB9EAFCF0C25924EB2DBEB25FBB88808909090AC184859065
+        9F5E0A331451C7DEDDA29103D1BEA011126578C77091953ACFC70FF2A367B271
+        CE6B1CA1920205738AB53DE69B667850941BDB035AB1203FDF38200505057A09
+        9877430D726DE10F6E8AA716A26676F87382EF947A6116C283E220EFB8222A9E
+        69D0F8262297EA72B96AE9F4362B33584036B4E7C2AFC68E449659C56D151E6E
+        91483C3E81BBC4ADE51E7ECF48B024E1A37565565616B2B38DEEEDEEEBC72E72
+        4333ADEFD8C71FB61C63FB69CAA6476850F32C01DC30FDA24124834485BF7869
+        6E6E9E62B55A3BA9A8A5BACCC463B1584ACBCACAFAB8FBB18F9448653D6FCA50
+        283E573041AC3C9C28D8EA9684D551D1ABD5640C9ED03749FA75CC54C25D91CC
+        389F02BB94444ECC92601450FF14EA5F2785CDB69085BEC600FF03D2BB39828C
+        D993AA0000000049454E44AE426082}
+      BitmapScale = 0.899999976158142100
+      ShowScrollBars = False
+      Viewport.Width = 46.000000000000000000
+      Viewport.Height = 46.000000000000000000
+    end
+    object Label4: TLabel
+      Position.X = 40.000000000000000000
+      Position.Y = 72.000000000000000000
+      Size.Width = 73.000000000000000000
+      Size.Height = 17.000000000000000000
+      Size.PlatformDefault = False
+      Text = 'Temp min :'
+      TabOrder = 39
+    end
+    object Label5: TLabel
+      Position.X = 40.000000000000000000
+      Position.Y = 104.000000000000000000
+      Text = 'Temp :'
+      TabOrder = 38
+    end
+    object Button2: TButton
+      Position.X = 88.000000000000000000
+      Position.Y = 152.000000000000000000
+      TabOrder = 40
+      Text = 'D'#233'finir'
+      OnClick = Button2Click
+    end
+    object Edit1: TEdit
+      Touch.InteractiveGestures = [LongTap, DoubleTap]
+      TabOrder = 42
+      KeyboardType = NumberPad
+      Position.X = 120.000000000000000000
+      Position.Y = 72.000000000000000000
+      Size.Width = 65.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
+    end
+    object Edit2: TEdit
+      Touch.InteractiveGestures = [LongTap, DoubleTap]
+      TabOrder = 41
+      KeyboardType = NumberPad
+      Position.X = 120.000000000000000000
+      Position.Y = 104.000000000000000000
+      Size.Width = 65.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
+    end
+    object Label13: TLabel
+      Position.X = 200.000000000000000000
+      Position.Y = 72.000000000000000000
+      Size.Width = 33.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = #176'C'
+      TabOrder = 6
+    end
+    object Label14: TLabel
+      Position.X = 200.000000000000000000
+      Position.Y = 104.000000000000000000
+      Size.Width = 33.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = #176'C'
+      TabOrder = 5
+    end
+  end
+  object GroupBox2: TGroupBox
+    Position.X = 376.000000000000000000
+    Position.Y = 80.000000000000000000
+    Size.Width = 225.000000000000000000
+    Size.Height = 185.000000000000000000
+    Size.PlatformDefault = False
+    Text = 'Informations'
+    TabOrder = 4
+    object Button3: TButton
+      Position.X = 72.000000000000000000
+      Position.Y = 144.000000000000000000
+      TabOrder = 38
+      Text = 'Rafra'#238'chir'
+    end
+    object Label7: TLabel
+      Position.X = 40.000000000000000000
+      Position.Y = 64.000000000000000000
+      Size.Width = 89.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = 'Temp. interne :'
+      TabOrder = 9
+    end
+    object ImageViewer2: TImageViewer
+      Position.X = 168.000000000000000000
+      Position.Y = 8.000000000000000000
+      TabOrder = 39
+      Bitmap.PNG = {
+        89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
+        87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+        0218494441546843ED995B4B545114C7FF6B4FE89341428FA688821532F49C46
+        465EF26BA85F407CE84B44111541FA39824A29CCC750F082620F518FA2BE880F
+        EAECDD3AC7854CB79939672DD806FB0787BDD69A73CEACEB3E8719242243B29A
+        B1BEBBDB7556C3530F1ACB0D018B57E01E576FF6EEE4BA31A60164CE9FD4B0E6
+        409D62CAF1F0876D15AA0EF6F7FF1093194E5613B2CCFFEE7C8683BB7656A327
+        A29A621AC045DBFC0D8F71914C310D806FD621E29F385C15C914D3005A250C23
+        D41F622E4594002C31DD8556B7BF36CCE69D813EF36DFBBFAF409A81D8A41988
+        4D9A81D8A419888D69469AF5332D9F7FDFF5998FBF9CB7F7E67E693F5205EA69
+        B50296A40AD49366A004690662936620366906626312809F40BB1FC62B51FF89
+        1FC28B700B6DA29AA02E69E63C8EF0960823626A48F058A2433CA22D9C884985
+        BE024778D6AAF319E4F02074C2EC875E5505FC3D0CF2D8AEF14D0A2582AB50E3
+        A5EA56B0796E298FAE0201D3459DCFE02A54F8AA295155685BE8A1ACC5091815
+        49852E008F1B221587D02D920A5D00AEF183AB099A6B2FD0B650F9FFBC02BE8B
+        A4421740C07B918A437827920A5D0015CCCB965888FC9A80055155A802709FB0
+        C1997C2D6AEB38BC749FB1259A0AED0C800E30CBD3B8286A53F8DC0F748C3951
+        D5E803E0771ADAC76408FCA2D6A09DB2CFD8F9E7ECFC247DC1A998D598BE9FFB
+        BBB8CD2999E2348FF2D1931B09DFF281E59EB76A9BC4E501F80967B4B3838A77
+        A19F0000000049454E44AE426082}
+      ShowScrollBars = False
+      Viewport.Width = 46.000000000000000000
+      Viewport.Height = 46.000000000000000000
+    end
+    object Label8: TLabel
+      Position.X = 40.000000000000000000
+      Position.Y = 104.000000000000000000
+      Size.Width = 89.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = 'Temp. externe :'
+      TabOrder = 6
+    end
+    object Label9: TLabel
+      Position.X = 152.000000000000000000
+      Position.Y = 104.000000000000000000
+      Size.Width = 33.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = #176'C'
+      TabOrder = 5
+    end
+    object Label10: TLabel
+      Position.X = 152.000000000000000000
+      Position.Y = 64.000000000000000000
+      Size.Width = 33.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = #176'C'
+      TabOrder = 4
+    end
+    object Label11: TLabel
+      Position.X = 136.000000000000000000
+      Position.Y = 104.000000000000000000
+      Size.Width = 25.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = '00'
+      TabOrder = 8
+    end
+    object Label12: TLabel
+      Position.X = 136.000000000000000000
+      Position.Y = 64.000000000000000000
+      Size.Width = 25.000000000000000000
+      Size.Height = 25.000000000000000000
+      Size.PlatformDefault = False
+      Text = '00'
+      TabOrder = 7
+    end
+  end
+  object IdHTTP1: TIdHTTP
+    ProxyParams.BasicAuthentication = False
+    ProxyParams.ProxyPort = 0
+    Request.ContentLength = -1
+    Request.ContentRangeEnd = -1
+    Request.ContentRangeStart = -1
+    Request.ContentRangeInstanceLength = -1
+    Request.Accept = 'text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8'
+    Request.BasicAuthentication = False
+    Request.UserAgent = 'Mozilla/3.0 (compatible; Indy Library)'
+    Request.Ranges.Units = 'bytes'
+    Request.Ranges = <>
+    HTTPOptions = [hoForceEncodeParams]
+    Left = 560
+    Top = 304
   end
 end
