--- a/Unit13.fmx
+++ b/Unit13.fmx
@@ -12,6 +12,7 @@ object Form13: TForm13
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop, iPhone, iPad]
   OnCreate = Splash
+  OnClose = closeMe
   DesignerMasterStyle = 0
   object Timer1: TTimer
     OnTimer = FinTemps
@@ -203,7 +204,7 @@ object Form13: TForm13
     object Button3: TButton
       Position.X = 88.000000000000000000
       Position.Y = 152.000000000000000000
-      TabOrder = 30
+      TabOrder = 29
       Text = 'Rafra'#238'chir'
       OnClick = Button3Click
     end
@@ -219,28 +220,28 @@ object Form13: TForm13
     object ImageViewer2: TImageViewer
       Position.X = 200.000000000000000000
       Position.Y = 8.000000000000000000
-      TabOrder = 32
+      TabOrder = 31
       Bitmap.PNG = {
         89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
         87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-        0223494441546843ED99CD6A144110C7FF5D33A3788860C0A351C48046C2E259
-        2346FCCC6B24BE8078F02544095104F539043541493C8A013528F1207A14CD25
-        78C8EE74DBBD29C2E66B7766AAA015FA07CB54D5CEECD4BFABAB7BD841223286
-        8F6A7C585D3DD62971DFC25CEB061CE673D0DDD699935FBABE32AA0242F21B25
-        96096698435DDA28D70E65D41A1F1DFDC12135888F2A8491DF997CA04076A453
-        9A7BECAAA22A606BDAEC451BD7D952455580FFB121367753E0305BAAA80AA88A
-        9B80EBFD70B811510468A2BA0ABDFFFCB5EF689E3B7D4A7DD9FEEF2B907A2036
-        A90762937A2036A90762A33A2283E6B359DCBCDFD15BAFB79DF7F3C9A5C679A4
-        0AF452B5029AA40AF4927AA001A90762937A2036A90762A322C0DEC0C172028F
-        D8DD97F202E6DC180EB0AB82B8A42179B78EE76430C9A1BE588B055AC34DB382
-        0D0E891057C027FFA06AF201225CB6C350FBA35754017B11E3A5C3725E73203A
-        6D94598616BDC5270E35465401E7305337F9405E207384697645880458E00A9B
-        B5F1E2AFB22942D6036D8CB0551B67709C4D11320145FF8D6B00926BB7900900
-        1ABFF3320EDFD9142112400E2FD9AC8D3178C1A608910093E1695812D9AD4CB8
-        C657E019BB22641578838F94E331BB95A1020F69092BEC8A90F600E8376EFBE5
-        749EDD81F8735FD11FDC61578C584078A6A15F98B20E73FDA653F8CE273FEB93
-        9F32EFFC02AC84EAF3B93D8FB361870D9B94EBE04488991CDF42C38639AF356D
-        12FF0EC05FE984BE80793908850000000049454E44AE426082}
+        0229494441546843ED99CF6A144110C6BFEED959F1A09080473588018D84C5B3
+        49D09044CD6BA82F201EF21241912404D4E710D48404F51812C81F12E241F428
+        9A8B7898DDE94EF75A848D9ADD99A9828ED03F58A6AA7666B7BEAEAE9A611791
+        C0283A8AB1B9BF7FB195E3A9819A6A072C966AD0338DEB57F6DABE30A2027CF2
+        598E0D0DD54FA1364DE4076713DD181E1CFC4A2131341D45F02BFF67F29E1449
+        5F2B57B3E48A222AE068DBFC8B0C77C912455480FBB07364FE4D1DE7C9124554
+        4051EC286CE78BC29508224012D129B4BEFBA9EB6ADEBC76557C6CFFF715883D
+        109AD803A1893D109AD803A1115D915EFB59BDFFFD7D171EAD1C3BEFDB8BDB95
+        F38815E8A46805248915E824F64005620F8426F64068620F84464480B98733F9
+        2816C83D917C047376087572456097D4276F7FE2B556B843A1AE1883657D80FB
+        6A07198558B02BE0927F5634798FD61837FD10FBA19755013386E196C5465A72
+        219A19F25A0D0DFD11DB14AA0CAB02D6E261D9E43D691D89D578402E0B960003
+        4C90591A277E924C16BC0A64B84466698CC2653259B004B881D8F5C6D503CEB5
+        47B004B80950F93F2F6DF1854C162C012E89B764964629BC219305AF02095EFA
+        91486E61FC35CAE215B92C781558C556926291DCC22475CCEB0FD8219705AF89
+        1DFA071EBB71BA446E4FDCB9EFF42F3C21970D5B807FA6D1DF316D2CE6BA6D27
+        FF9E4BFEB94B7E5AADA1496136A2CFE7E6166EF83BACBF499926067C4CA7F8EC
+        1BD6EF79A96D13393D008701FEBF7F66D4BC020000000049454E44AE426082}
       ShowScrollBars = False
       Viewport.Width = 46.000000000000000000
       Viewport.Height = 46.000000000000000000
@@ -335,6 +336,13 @@ object Form13: TForm13
     Text = 'Version 1.0'
     TabOrder = 9
   end
+  object Button1: TButton
+    Position.X = 8.000000000000000000
+    Position.Y = 272.000000000000000000
+    TabOrder = 17
+    Text = 'VOIR'
+    OnClick = Button1Click
+  end
   object IdHTTP1: TIdHTTP
     ProxyParams.BasicAuthentication = False
     ProxyParams.ProxyPort = 0
@@ -350,5 +358,24 @@ object Form13: TForm13
     HTTPOptions = [hoForceEncodeParams]
     Left = 56
     Top = 616
+  end
+  object ADOConnection1: TADOConnection
+    Left = 448
+    Top = 16
+  end
+  object ADOQuery1: TADOQuery
+    Parameters = <>
+    Left = 80
+    Top = 16
+  end
+  object DataSetProvider1: TDataSetProvider
+    Left = 256
+    Top = 264
+  end
+  object ClientDataSet1: TClientDataSet
+    Aggregates = <>
+    Params = <>
+    Left = 368
+    Top = 264
   end
 end
