--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -19,16 +19,19 @@ object Form1: TForm1
     Size.Height = 521.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
-    Viewport.Width = 401.000000000000000000
-    Viewport.Height = 521.000000000000000000
+    Viewport.Width = 397.000000000000000000
+    Viewport.Height = 517.000000000000000000
   end
-  object ADOConnection1: TADOConnection
-    Left = 128
+  object FDConnection1: TFDConnection
+    Params.Strings = (
+      'DriverID=SQLite'
+      'Database=C:\Users\Public\Documents\XTEMP\TMPDB.db')
+    Left = 304
     Top = 136
   end
-  object ADOQuery1: TADOQuery
-    Parameters = <>
-    Left = 320
-    Top = 168
+  object FDQuery1: TFDQuery
+    Connection = FDConnection1
+    Left = 312
+    Top = 248
   end
 end
