--- a/Unit13.fmx
+++ b/Unit13.fmx
@@ -12,7 +12,6 @@ object Form13: TForm13
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop, iPhone, iPad]
   OnCreate = Splash
-  OnClose = closeMe
   DesignerMasterStyle = 0
   object Timer1: TTimer
     OnTimer = FinTemps
@@ -224,24 +223,24 @@ object Form13: TForm13
       Bitmap.PNG = {
         89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
         87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-        0229494441546843ED99CF6A144110C6BFEED959F1A09080473588018D84C5B3
-        49D09044CD6BA82F201EF21241912404D4E710D48404F51812C81F12E241F428
-        9A8B7898DDE94EF75A848D9ADD99A9828ED03F58A6AA7666B7BEAEAE9A611791
-        C0283A8AB1B9BF7FB195E3A9819A6A072C966AD0338DEB57F6DABE30A2027CF2
-        598E0D0DD54FA1364DE4076713DD181E1CFC4A2131341D45F02BFF67F29E1449
-        5F2B57B3E48A222AE068DBFC8B0C77C912455480FBB07364FE4D1DE7C9124554
-        4051EC286CE78BC29508224012D129B4BEFBA9EB6ADEBC76557C6CFFF715883D
-        109AD803A1893D109AD803A1115D915EFB59BDFFFD7D171EAD1C3BEFDB8BDB95
-        F38815E8A46805248915E824F64005620F8426F64068620F84464480B98733F9
-        2816C83D917C047376087572456097D4276F7FE2B556B843A1AE1883657D80FB
-        6A07198558B02BE0927F5634798FD61837FD10FBA19755013386E196C5465A72
-        219A19F25A0D0DFD11DB14AA0CAB02D6E261D9E43D691D89D578402E0B960003
-        4C90591A277E924C16BC0A64B84466698CC2653259B004B881D8F5C6D503CEB5
-        47B004B80950F93F2F6DF1854C162C012E89B764964629BC219305AF02095EFA
-        91486E61FC35CAE215B92C781558C556926291DCC22475CCEB0FD8219705AF89
-        1DFA071EBB71BA446E4FDCB9EFF42F3C21970D5B807FA6D1DF316D2CE6BA6D27
-        FF9E4BFEB94B7E5AADA1496136A2CFE7E6166EF83BACBF499926067C4CA7F8EC
-        1BD6EF79A96D13393D008701FEBF7F66D4BC020000000049454E44AE426082}
+        0229494441546843ED99DD6A534110C7FFBB27C9C18B0A16BC548B58504B095E
+        6B8B8AF5A3AF517D81D20B5F422C5245509F43505B2ADACB62A1B5B4D40BD14B
+        B1BD294292EEAEBB7128F12B39E7CCC02AEC0FC299999C4DE6BFB3B37B489088
+        8CA2AB18EB3B3B270E0CEE5BA8EBDD80C3620DFA6EF3DCE9EDAE2F8CA880907C
+        DB604D430D53A84B0766EF48A69BE3A3A39F292486A6AB0861E67F4D3E504776
+        ECC0A87BE48A222AE070D9FC89166E90258AA800FF614364FE4E8EA36489222A
+        A0286E02AEF745E14A44112089E82EF46EEB43DFD9BC70F68CF8B6FDDF5720F5
+        406C520FC426F5406C520FC446744606AD67F5E6C7F71DBFB3FCD37D5F9E5CAE
+        9C47AA402F452B2049AA402FA9072A907A2036A90762937A20362202EC4DE466
+        028FC8FD2BE61216DC7934C815815DD290BCDBC773AD7085427DB1164B7A0FB7
+        D426DA1462C1AE804F7EBE68F201AD71D50E43EC875E5605EC24C63B0E6B7E4D
+        949A88760BA65E4753AFE03D852AC3AA8073B85D36F9402347E63466C865C112
+        60816B6496C68B9F2293054F400B27C92C8D513845260B9600E4FD0FAE0170C6
+        1EC212E00757FECF2B73F844260B9E00879764964629BC2093054B80CAF0346C
+        89E416268C510ECFC865C1ABC06B6CD41A784C6E616A391EEAB7D82497054B40
+        40EF62D66FA78BE40EC4DFFB4A7FC31CB96CD802C2338DFE8A69EBB0D06F3985
+        F77CF20F7CF2D36A151D0AB3117D3EB71731164ED87048993646422C6BE06368
+        D8B0E6A5964DE2DF01F80E0BF1BF7EDCC76F1F0000000049454E44AE426082}
       ShowScrollBars = False
       Viewport.Width = 46.000000000000000000
       Viewport.Height = 46.000000000000000000
@@ -359,23 +358,28 @@ object Form13: TForm13
     Left = 56
     Top = 616
   end
-  object ADOConnection1: TADOConnection
-    Left = 448
-    Top = 16
-  end
-  object ADOQuery1: TADOQuery
-    Parameters = <>
-    Left = 80
-    Top = 16
-  end
-  object DataSetProvider1: TDataSetProvider
-    Left = 256
+  object FDConnection1: TFDConnection
+    Params.Strings = (
+      'DriverID=SQLite'
+      'Database=C:\Users\Public\Documents\XTEMP\TMPDB.db')
+    Left = 248
     Top = 264
   end
-  object ClientDataSet1: TClientDataSet
-    Aggregates = <>
-    Params = <>
-    Left = 368
+  object FDQuery1: TFDQuery
+    Connection = FDConnection1
+    SQL.Strings = (
+      
+        'IF NOT EXISTS (SELECT name FROM sqlite_master WHERE type='#39'databa' +
+        'se'#39' AND name='#39'MaBaseDeDonnees'#39')'
+      'BEGIN'
+      '   CREATE DATABASE MaBaseDeDonnees;'
+      'END;')
+    Left = 336
+    Top = 264
+  end
+  object FDPhysSQLiteDriverLink1: TFDPhysSQLiteDriverLink
+    VendorLib = 'C:\Windows\System32\sqlite3.dll'
+    Left = 448
     Top = 264
   end
 end
